Fix: Search results cards overflowing when long titles are used

--- a/src/freelancer_search/style.css
+++ b/src/freelancer_search/style.css
@@ -1,6 +1,6 @@
 .freelancer-search-result-card{
     padding: 1em;
-    max-height: 10em;
+    max-height: fit-content;
 }
 
 .freelancer-search-result-description{
